Fixed lyrics section to wrap lines horiztonally.

--- a/Chavah.NetCore/wwwroot/css/app/nowPlaying.less
+++ b/Chavah.NetCore/wwwroot/css/app/nowPlaying.less
@@ -195,6 +195,7 @@
         pre {
             font-family: @title-font;
             font-size: 20px;
+            white-space: pre-wrap; // wrap long lines so that we don't get a horizontal scrollbar
         }
 
         .submit-lyrics {
